apps/vault-webdav/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-webdav
  labels:
    app.kubernetes.io/name: vault-webdav
spec:
  selector:
    app.kubernetes.io/name: vault-webdav
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5000
